prevent long urls from breaking out of container

--- a/neptune/style.css
+++ b/neptune/style.css
@@ -28,6 +28,14 @@ body {
 	color: #505050;
 	margin: 0px;
 	overflow-x:hidden;
+		/* breaking long links */ 
+		word-wrap: break-word;
+		-ms-word-break: break-all;
+		word-break: break-all;
+		word-break: break-word;
+		-webkit-hyphens: auto;
+		-moz-hyphens: auto;
+		hyphens: auto;
 }
 
 div.container {
